--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,19 @@
 
 apply plugin: 'war'
 
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.5'
+    }
+}
+
+apply plugin: 'com.bmuschko.tomcat'
+
 repositories {
     mavenCentral()
 }
@@ -16,7 +29,37 @@ repositories {
 dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     testCompile 'junit:junit:4.12'
+
+    //def tomcatVersion = '8.5.12'
+    def tomcatVersion = '7.0.76'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
+
+
 }
+
+tomcat {
+    httpPort = 8090
+    //httpsPort = 8091
+    //enableSSL = true
+    //contextPath = 'sample-app'
+
+    users {
+        user {
+            username = 'user1'
+            password = '123456'
+            roles = ['developers', 'admin']
+        }
+
+        user {
+            username = 'user2'
+            password = 'abcdef'
+            roles = ['manager']
+        }
+    }
+}
+
 
 sourceSets {
     main {
