--- a/selenium/package.json
+++ b/selenium/package.json
@@ -4,8 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test" : "node_modules/mocha/bin/mocha -t 10000  test.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+
+
+  "devDependencies": {
+    "phantomjs-prebuilt": "^2.1.7",
+    "mocha": "^3.2.0",
+    "mocha-phantomjs": "^4.1.0",
+    "chai": "^3.5.0",
+
+    "chai-as-promised": "^6.0.0",
+    "selenium-standalone": "^5.9.1",
+    "webdriverio": "^4.6.1"
+  }
 }
